infer/tests/codetoanalyze/objc/errors/protocol_procdesc/main.dot
digraph iCFG {
19 [label="19:  DeclStmt \n   n$1=_fun___objc_alloc_no_fail(sizeof(class Bicycle ):unsigned long ) [line 14]\n  *&bike:class Bicycle *=n$1 [line 14]\n  REMOVE_TEMPS(n$1); [line 14]\n " shape="box"]
	

	 19 -> 18 ;
18 [label="18:  Message Call: signalStop \n   n$0=*&bike:class Bicycle * [line 16]\n  _fun_Bicycle_signalStop(n$0:class Bicycle *) virtual [line 16]\n  REMOVE_TEMPS(n$0); [line 16]\n  NULLIFY(&bike,false); [line 16]\n " shape="box"]
	

	 18 -> 17 ;
17 [label="17:  Return Stmt \n   *&return:int =0 [line 18]\n  APPLY_ABSTRACTION; [line 18]\n " shape="box"]
	

	 17 -> 16 ;
16 [label="16: Exit main \n  " color=yellow style=filled]
	

15 [label="15: Start main\nFormals: \nLocals:  bike:class Bicycle * \n   DECLARE_LOCALS(&return,&bike); [line 12]\n  NULLIFY(&bike,false); [line 12]\n " color=yellow style=filled]
	

	 15 -> 19 ;
14 [label="14: Exit StreetVehicle_frontendChecks \n  " color=yellow style=filled]
	

13 [label="13: Start StreetVehicle_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 13 -> 14 ;
12 [label="12: Exit NSDiscardableContent_frontendChecks \n  " color=yellow style=filled]
	

11 [label="11: Start NSDiscardableContent_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 11 -> 12 ;
10 [label="10: Exit NSSecureCoding_frontendChecks \n  " color=yellow style=filled]
	

9 [label="9: Start NSSecureCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 9 -> 10 ;
8 [label="8: Exit NSCoding_frontendChecks \n  " color=yellow style=filled]
	

7 [label="7: Start NSCoding_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 7 -> 8 ;
6 [label="6: Exit NSMutableCopying_frontendChecks \n  " color=yellow style=filled]
	

5 [label="5: Start NSMutableCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 5 -> 6 ;
4 [label="4: Exit NSCopying_frontendChecks \n  " color=yellow style=filled]
	

3 [label="3: Start NSCopying_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 3 -> 4 ;
2 [label="2: Exit NSObject_frontendChecks \n  " color=yellow style=filled]
	

1 [label="1: Start NSObject_frontendChecks\nFormals: \nLocals:  \n  " color=yellow style=filled]
	

	 1 -> 2 ;
}
